--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,12 +6,19 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v3
+      
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 7
+          run_install: true
+
       - name: Install and Build
-        run: |
-          pnpm i
+        run:
           pnpm build
+      
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
